Fixed Activate button on iOS.

--- a/userpage/static/userpage/style.css
+++ b/userpage/static/userpage/style.css
@@ -132,6 +132,10 @@ nav a.nav-status
 }
 
 input[type=submit]{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius: 0px;
     width: 300px;
     height: 50px;
     background: #FFFFFF;
